<resources>
    <string name="app_name">GuNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GuNews</string>
    <string name="nav_header_subtitle">my daily news briefing</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_gunews">Content Policy</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <string name="settings_order_by_newest_label">Newest first</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest first</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_label">Sort the news by</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>
    <string name="share_text">Search for GuNews app by Sirus Laia on Google Play Store\n\nGuNews. Powered by theguardian.com</string>
    <string name="feedback_mailto" translatable="false">mailto:laia.sirus@gmail.com</string>
    <string name="feedback_subject">My feedback to GuNews app</string>

    <string name="menu_headlines">Headlines</string>
    <string name="menu_headlines_title">GuNews Headlines</string>
    <string name="menu_culture">Culture</string>
    <string name="menu_education">Education</string>
    <string name="menu_family">Family</string>
    <string name="menu_hrights">Human Rights</string>
    <string name="menu_opinion">Opinions</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_sport">Sports</string>
    <string name="menu_technology">Technology</string>
    <string name="menu_wellbeing">Wellbeing</string>
    <string name="menu_gunews">Content policy</string>
    <string name="menu_about">About</string>
    <string name="menu_attribution">Attribution</string>
    <string name="menu_connection">No connection</string>
    <string name="menu_search">Search results</string>
    <string name="menu_search2">The search results</string>
    <string name="menu_settings">Settings</string>

    <string name="query_culture" translatable="false">culture entertainment media</string>
    <string name="query_family" translatable="false">family community education school</string>
    <string name="query_hrights" translatable="false">\"human rights\"</string>
    <string name="query_sport" translatable="false">football sport</string>
    <string name="query_technology" translatable="false">technology science android</string>
    <string name="section_politics" translatable="false">politics</string>
    <string name="show_fields" translatable="false">byline,shortUrl,thumbnail</string>
    <string name="order_by_newest" translatable="false">newest</string>

    <!-- About & attribution -->

    <string name="about_the_app">About GuNews</string>
    <string name="about_me_header">About Me</string>
    <string name="about_me">I\'m new to Android programming and the Udacity\'s nanodegree program has helped me getting started.\n\nPlease give me feedback by sending feedback in the app Settings.</string>
    <string name="attribution"><b>News source</b>: theguardian.com, one of the few trusted news sources nowadays. <i>So guaranteed no fake</i>.\n\n<b>Code source</b>: The app used the example app by Anitaa Murthy (https://github.com/anitaa1990/PagingLibrary-Sample) as starting point. Some particular solutions are from stockoverflow.com and clearly referenced in the code.\n\n<b>Image</b>: Earth by WikiImages (https://pixabay.com/photos/earth-soil-creep-moon-lunar-surface-11014 )</string>

    <!-- Various -->
    <string name="no_connection">No Internet.\n\nPlease check the Internet connection.\nTurn on WiFi or mobile data.</string>
    <string name="content_description">News related image</string>
    <string name="date_format" formatted="false">%s at %s by</string>
    <string name="not_available">N/A</string>
    <string name="search_tips">You can refine the search results by going to <b>Settings</b> and set the order by to <b>relevance</b>, <b>newest</b> or <b>oldest</b>. Use double quote (<b>\"</b>) for exact search word order.</string>

    <!-- Settings preferences -->
    <string name="newsadapter_switch">Switch off to hide images</string>
    <string name="newsadapter_switch_label">Show images in the news list</string>
    <string name="newsadapter_with_images">showImages</string>

    <!-- Content policy -->
    <string name="gunews"><b>NEWS SOURCE</b>\n\n

1. All news in GuNews app are aggregated from a single source: theguardian.com.\n
2. This app makes use of the free contents provided by theguardian.com through https://open-platform.theguardian.com, which is open to every one and publicly available through their api for developers.\n
3. No other news sources are used, as the main goal of the app is to consume trustworthy news. In this app developer\'s opinion, theguardian.com is one of the few media out there that is widely acknowledged and trusted.\n\n

<b>NEWS ITEM AGGREGATED</b>\n\n

4. From vast contents available on theguardian.com, the GuNews app concentrates on aggregating the following topics: culture, family, human rights, politics, sports and technology.\n
5. As the open and free access provided by theguardian.com includes the vast database of their media history, the app can present news item from recent times as well as from the previous century. In the app Settings the user can sort the news by publishing date (old, recent or relevancy).\n\n


<b>ADS SHOWN IN THE ARTICLE</b>\n\n

6. GuNews app does not contain ads.\n
7. However GuNews is transparent and gives the possibility to the user to see the original website published by theguardian.com through a WebView. The original website from theguardian.com may show ads, which are the responsibility of theguardian.com and not related in anyway with the GuNews.\n
8. If the user does not want to see ads, please do not go to the original website of the published news.\n\n

<b>OWNERSHIP</b>\n\n

9. As all the news are from theguardian.com and its contributors, GuNews does not have any ownership of the news accessible through the app.\n\n

<b>CONTACT INFORMATION</b>\n\n

10. For all enquiries relating to news contents from theguardian.com please contact them at \n
Email: customer.help@theguardian.com\n
Phone: 0330 333 6767 (UK).
</string>

</resources>
