<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/newsadapter_with_images"
        android:summary="@string/newsadapter_switch"
        android:title="@string/newsadapter_switch_label" />

    <ListPreference
        android:title="Order by"
        app:defaultValue="@string/settings_order_by_default"
        app:entries="@array/settings_order_by_labels"
        app:entryValues="@array/settings_order_by_values"
        app:key="@string/settings_order_by_key"
        app:title="@string/settings_order_by_label"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
